elaina/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: elaina
spec:
  type: NodePort
  ports:
    - name: web
      port: 8080
      targetPort: 8080
