elaina/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elaina
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
    - host: elaina.app.n3ko.co
      http:
        paths:
          - backend:
              service:
                name: elaina
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - elaina.app.n3ko.co
      secretName: elaina-cert
